Move from internal base64 to java.util.Base64